@@ -28,10 +28,16 @@ sub build {
 }
 
 sub test {
-  my ( $self, $target ) = @_;
+  my ( $self, $target, $arg ) = @_;
 
   my $make = $self->make_path;
   $self->build;
+
+  my $jobs = $arg ? "j" . $arg->{jobs} : '';
+  my $ho = "HARNESS_OPTIONS";
+  local $ENV{$ho} = $ENV{$ho} ? "$ENV{$ho}:$jobs" : $jobs
+    if $jobs;
+
   system($make, 'test',
     ( $self->zilla->logger->get_debug ? 'TEST_VERBOSE=1' : () ),
   ) and die "error running $make test\n";
